k8s/grappler.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grappler
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: grappler
spec:
  tls:
  - secretName: grappler-tls
    hosts:
    - hooks.svc.kazoku.co
  rules:
  - host: hooks.svc.kazoku.co
    http:
      paths:
      - path: /
        backend:
          serviceName: grappler
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: grappler
spec:
  selector:
    app: grappler
  ports:
  - name: http
    port: 80
    targetPort: 8000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grappler
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: grappler
    spec:
      containers:
      - name: grappler
        image: kazokuco/grappler
        imagePullPolicy: Always
        command: ["grappler", "/config/config.yml"]
        livenessProbe:
          httpGet:
            path: /health
            port: http
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: grappler
